[tool.poetry]
name = "fastapi-basic-auth-example"
version = "0.1.0"
description = ""
authors = ["Rob van der Leek <5324924+robvanderleek@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
